--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </section>
 
     <section id="twitter">
-      <a class="twitter-timeline" href="https://twitter.com/realDonaldTrump" data-widget-id="712655386478821376">Tweets by @realDonaldTrump</a>
+      <a class="twitter-timeline" href="https://twitter.com/micnews" data-widget-id="722483854620155904">Tweets by @micnews</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </section>
 
