--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     }
 
     section.active {
-      height:295px
+      height:294px
     }
 
     #video-wrap {
@@ -112,7 +112,7 @@
       left:0;
       width:300px;
       height:168px;
-      border-top:2px solid #21c1ff;
+      border:2px solid #21c1ff;
       background:#ccc;
       z-index:15
     }
